- Request::post() for getting sanitized or raw request data.
- SanitizeType enum for defining data sanitization levels.
- Request::getRemoteAddress() for getting remote address (unless is defined as hidden).
- AuthWorker::regenerateCSRF() for regenerating CSRF token.
- DataSlave optional SSL/TLS support via DB_USE_SSL and DB_SSL_CA environment variables.

#### Changed
- DataSlave now uses regex filtering for injected strings (table, cols, conditions and orderBy).
- Request now sanitizes data in different levels of severity.
- MailSlave::getMailTemplate() now uses realpath() to prevent directory traversal attacks.
- MailSlave::setMailerAttachments() now uses realpath() to prevent directory traversal attacks.

#### Fixed
- Logs are not being stored inside storage directory.
- AuthWorker::autologin() produces a timing attack vulnerability.

#### Removed
- sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 
- getDataItem() method from Request component is getting deprecated.
- getOriginInfo() method from Request component.
- Permissions-Policy meta tag from main.php template.

---

### [v0.3] - 2025-12-17
#### Added
- Config::configurePrivacy(...) for defining whether to register logs or restrict what data to register.
- Collection and Item components for handling key-value pair arrays.
- ValidationWorker for validating data such as email addresses or passwords.
- ValidationFlags collection for handling validation flags.
- API Response success boolean field.
- AlreadyAuthorizedException for handling unauthorized exclusive endpoints.
- Endpoint argument unauthorizedExclusive for handling unauthorized exclusive endpoints.
- LogWorker::debug() for debugging system logs.
- MailWorker for sending crafted and dynamic emails.
- Mail component for crafting mail objects.
- Item::mail and Item::file for helping with Mail crafting.
- AUTH_DOMAIN env variable for defining global authorization domain.