@@ -8,6 +8,8 @@
 - Request::getRemoteAddress() for getting remote address (unless is defined as hidden).
 - AuthWorker::regenerateCSRF() for regenerating CSRF token.
 - DataSlave optional SSL/TLS support via DB_USE_SSL and DB_SSL_CA environment variables.
+- StorageWorker and StorageSlave for managing lightweight cache and file uploads.
+- Support for non-apcu cache via StorageWorker and files inside storage/cache folder.
 
 #### Changed
 - DataSlave now uses regex filtering for injected strings (table, cols, conditions and orderBy).
